Closed Bug 473437 Opened 16 years ago Closed 16 years ago

DumpJSStack() can set a pending exception

Categories

(Core :: XPConnect, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mrbkap, Unassigned)

Details

Attachments

(1 file)

Attached patch Hacky fixSplinter Review
I noticed when debugging that calling DumpJSStack() can result in the current context ending up with a set exception, modifying the current state. I didn't have time to track the problem all the way down to its roots, but I'll attach a patch that works around the problem.
Attachment #356807 - Flags: review?(jst)
Attachment #356807 - Flags: superreview+
Attachment #356807 - Flags: review?(jst)
Attachment #356807 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/94b8ea0a2a10
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: