Bug 473437 - DumpJSStack() can set a pending exception in cx. r+sr=jst